@@ -213,7 +213,7 @@ suggestions:
   Dmitriy Matrosov
   Michele Santullo
   Scott Kroll
-  Kosta H
+  Kosta Harlan
   Hector Arciga
   Jan Kunder
   jck
