@@ -1,8 +1,11 @@
 2.4.5 () -
 
+- TW-303  Ability for "import" to update existing tasks (thanks to Kosta
+Harlan).
 - TW-1440 "task import" from STDIN (thanks to Renato Alves).
 - TW-1432 start/stop can be issued on completed tasks  (thanks to Renato Alves).
 - TW-1572 Better urgency inheritance (thanks to Jens Erat).
+- Prevent potential task duplication during import for non-pending tasks.
 
 ------ current release ---------------------------
 
